alle pfade für deploy angepasst

--- a/tasks/u10/index.html
+++ b/tasks/u10/index.html
@@ -12,11 +12,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u10/a1/index.html">index.html</file-viewer>
+        <file-viewer src="tasks/u10/a1/index.html">index.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u10/a1/index.html"></embed-browser>
+        <embed-browser src="tasks/u10/a1/index.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -30,11 +30,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u10/a2/index.html">index.html</file-viewer>
+        <file-viewer src="tasks/u10/a2/index.html">index.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u10/a2/index.html"></embed-browser>
+        <embed-browser src="tasks/u10/a2/index.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -48,12 +48,12 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u10/a3/App.vue">index.html</file-viewer>
+        <file-viewer src="tasks/u10/a3/App.vue">index.html</file-viewer>
     </example-tab>
 
     <example-tab title="SPA als Download">
     <p>Die SPA aus der Übung können Sie hier als ZIP herunterladen</p> <br>
-    <button><a href="/tasks/u10/a3/a3.zip">ZIP herunterladen &#8659;</a></button>
+    <button><a href="tasks/u10/a3/a3.zip">ZIP herunterladen &#8659;</a></button>
 
     </example-tab>
 </example-tabs>
