--- a/tasks/u11/index.html
+++ b/tasks/u11/index.html
@@ -8,15 +8,15 @@
     </example-tab>
 
     <example-tab title="Code WAT">
-        <file-viewer src="/tasks/u11/a1_1.wat">ggt.wat</file-viewer>
+        <file-viewer src="tasks/u11/a1_1.wat">ggt.wat</file-viewer>
     </example-tab>
 
     <example-tab title="Code JS">
-        <file-viewer src="/tasks/u11/a1_2.js">a1_2.js</file-viewer>
+        <file-viewer src="tasks/u11/a1_2.js">a1_2.js</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u11/a1.html">ggt.wat</embed-browser>
+        <embed-browser src="tasks/u11/a1.html">ggt.wat</embed-browser>
     </example-tab>
 
 </example-tabs>
@@ -31,23 +31,23 @@
     </example-tab>
 
     <example-tab title="Code WAT">
-        <file-viewer src="/tasks/u11/a2.wat">a2.wat</file-viewer>
+        <file-viewer src="tasks/u11/a2.wat">a2.wat</file-viewer>
     </example-tab>
 
     <example-tab title="Code JS">
-        <file-viewer src="/tasks/u11/a2.js">a2.js</file-viewer>
+        <file-viewer src="tasks/u11/a2.js">a2.js</file-viewer>
     </example-tab>
 
     <example-tab title="Code C">
-        <file-viewer src="/tasks/u11/a2.c">a2.c</file-viewer>
+        <file-viewer src="tasks/u11/a2.c">a2.c</file-viewer>
     </example-tab>
 
     <example-tab title="Code HTML">
-        <file-viewer src="/tasks/u11/a2.html">a2.html</file-viewer>
+        <file-viewer src="tasks/u11/a2.html">a2.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u11/a2.html">a2.html</embed-browser>
+        <embed-browser src="tasks/u11/a2.html">a2.html</embed-browser>
     </example-tab>
 
 </example-tabs>
