--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -1,7 +1,7 @@
 <p>
     Da immer mehr Endanwender Webseiten nicht mehr primär über einen Desktop Pc aufrufen sondern vermehrt auch über mobile Endgeräte (Siehe Abb. 2.1) wurde der Anspruch an Webseiten das Design benutzerfreundlicher für mobile Geräte zu gestalten immer größer.
     <figure>
-        <img src="/tasks/u2/mobil_vs_desktop.png" alt="Statisitik mobil vs desktop">
+        <img src="tasks/u2/mobil_vs_desktop.png" alt="Statisitik mobil vs desktop">
         <figcaption>
             Abbildung 2.1: Verhältnis von Webseitenaufrufen in den Jahren 2019 und 2020 in den USA basieren auf 5.7 Trillion Webseiten Aufrufen <reference-source author="Perficent" year="2022" url="https://www.perficient.com/insights/research-hub/mobile-vs-desktop-usage">Mobile vs. Desktop Usage in 2020</reference-source>.
         </figcaption>
@@ -23,17 +23,17 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u2/holy-grail1.png" alt="Error">
+            <img src="tasks/u2/holy-grail1.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u2/a1.html">Index File</file-viewer>
+        <file-viewer src="tasks/u2/a1.html">Index File</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u2/a1.html"></embed-browser>
+        <embed-browser src="tasks/u2/a1.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
@@ -49,11 +49,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u2/a2.html">Index File</file-viewer>
+        <file-viewer src="tasks/u2/a2.html">Index File</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u2/a1.html"></embed-browser>
+        <embed-browser src="tasks/u2/a1.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
@@ -69,25 +69,25 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u2/holy-grail2.png" alt="Error">
+            <img src="tasks/u2/holy-grail2.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code - Flex">
-        <file-viewer src="/tasks/u2/a3_1.html">Index File</file-viewer>
+        <file-viewer src="tasks/u2/a3_1.html">Index File</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau - Flex">
-        <embed-browser src="/tasks/u2/a3_1.html"></embed-browser>
+        <embed-browser src="tasks/u2/a3_1.html"></embed-browser>
     </example-tab>
 
     <example-tab title="Code - Grid">
-        <file-viewer src="/tasks/u2/a3_2.html">Index File</file-viewer>
+        <file-viewer src="tasks/u2/a3_2.html">Index File</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau - Grid">
-        <embed-browser src="/tasks/u2/a3_2.html"></embed-browser>
+        <embed-browser src="tasks/u2/a3_2.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
@@ -101,17 +101,17 @@
     
 <example-tab title="Mockup">
     <figure>
-        <img src="/tasks/u1/landing.png" alt="Error">
+        <img src="tasks/u1/landing.png" alt="Error">
         <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
     </figure>
 </example-tab>
 
 <example-tab title="Code">
-    <file-viewer src="/tasks/u2/a4.html">a4.html</file-viewer>
+    <file-viewer src="tasks/u2/a4.html">a4.html</file-viewer>
 </example-tab>
 
 <example-tab title="Vorschau">
-    <embed-browser src="/tasks/u2/a4.html"></embed-browser>
+    <embed-browser src="tasks/u2/a4.html"></embed-browser>
 </example-tab>
 </example-tabs>
 <h2>Aufgabe 2.5 - Integration in die eigene Webseite</h2>
