--- a/tasks/u3/index.html
+++ b/tasks/u3/index.html
@@ -5,7 +5,7 @@
     console.clear();
     console.log("Einbindung der Funktionen")
     const script = document.createElement("script");
-    script.src = "/tasks/u3/a1.js";
+    script.src = "tasks/u3/a1.js";
     document.head.appendChild(script);
 </script>
 <h2>Aufgabe 3.1 - Funktionen in JavaScript</h2>
@@ -18,7 +18,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_1.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_1.js"></file-viewer>
     </example-tab>
 
 </example-tabs>
@@ -31,7 +31,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_2.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_2.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -43,7 +43,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_3.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_3.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -55,7 +55,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_4.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_4.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -67,7 +67,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_5.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_5.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -79,7 +79,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_6.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_6.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -91,7 +91,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_7.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_7.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -104,7 +104,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_8.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_8.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -116,7 +116,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_9.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_9.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -128,7 +128,7 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u3/js-files/a1_10.js"></file-viewer>
+        <file-viewer src="tasks/u3/js-files/a1_10.js"></file-viewer>
     </example-tab>
 </example-tabs>
 
