--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -14,21 +14,21 @@
     
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u4/Einkaufsliste.png" alt="Error">
+            <img src="tasks/u4/Einkaufsliste.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code - a1.html">
-        <file-viewer src="/tasks/u4/a1.html">a1.html</file-viewer>
+        <file-viewer src="tasks/u4/a1.html">a1.html</file-viewer>
     </example-tab>
 
     <example-tab title="Code - a1.js">
-        <file-viewer src="/tasks/u4/a1.js">a1.js</file-viewer>
+        <file-viewer src="tasks/u4/a1.js">a1.js</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u4/a1.html"></embed-browser>
+        <embed-browser src="tasks/u4/a1.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
@@ -46,21 +46,21 @@
     
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u4/Rednerliste.png" alt="Error">
+            <img src="tasks/u4/Rednerliste.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code - a2.html">
-        <file-viewer src="/tasks/u4/a2.html">a2.html</file-viewer>
+        <file-viewer src="tasks/u4/a2.html">a2.html</file-viewer>
     </example-tab>
 
     <example-tab title="Code - a2.js">
-        <file-viewer src="/tasks/u4/a2.js">a2.js</file-viewer>
+        <file-viewer src="tasks/u4/a2.js">a2.js</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u4/a2.html"></embed-browser>
+        <embed-browser src="tasks/u4/a2.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
@@ -78,17 +78,17 @@
 
     <example-tab title="Mockup">
         <figure>
-            <img src="/tasks/u4/excel_formel.png" alt="Error">
+            <img src="tasks/u4/excel_formel.png" alt="Error">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
     <example-tab title="Code - a3.html">
-        <file-viewer src="/tasks/u4/a3.html">a3.html</file-viewer>
+        <file-viewer src="tasks/u4/a3.html">a3.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u4/a3.html"></embed-browser>
+        <embed-browser src="tasks/u4/a3.html"></embed-browser>
     </example-tab>
 
   </example-tabs>
@@ -104,15 +104,15 @@
     </example-tab>
 
     <example-tab title="Code - a4.html">
-        <file-viewer src="/tasks/u4/a4.html">a4.html</file-viewer>
+        <file-viewer src="tasks/u4/a4.html">a4.html</file-viewer>
     </example-tab>
 
     <example-tab title="Code - a4.js">
-        <file-viewer src="/tasks/u4/a4.js">a4.js</file-viewer>
+        <file-viewer src="tasks/u4/a4.js">a4.js</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u4/a4.html"></embed-browser>
+        <embed-browser src="tasks/u4/a4.html"></embed-browser>
     </example-tab>
   </example-tabs>
 
