--- a/tasks/u5/index.html
+++ b/tasks/u5/index.html
@@ -1,7 +1,7 @@
 <p>
     In dieser Aufgabe dreht sich alles um die <strong>asychrone Programmierung</strong>. Da JavaScript grundsätzlich nur in einem Thread ausgeführt wird, muss man sich spätestens bei zeitintensiven Berechnungen fragen wie man dafür sorgen kann, dass die Webseite an anderern Stellen nicht blokiert oder sogar nicht  mehr korrekt angezeigt werden kann. Eine Möglichkeit ein solches Verhalten umzusetzen ist der Einsatz von <dfn>Promisses</dfn> <em>dt. Versprechen</em>. Wie man bereist bei dem Namen vermuten könnte, erhält man bei einer Berechnung nicht sofort ein Ergebnis sondern erstmal nur ein Prommis, dass ein Ergebnis in Zukunft geliefert wird. Auf die Erfüllung <dfn>resolve</dfn> oder die Verwerfung <dfn>reject</dfn> kann man entsprechend warten und zwischenzeitlich wieteren Code ausführen. Über Callback Funktionen kann dann definiert werden, wie verfahren werden soll wenn das Promises fullfilled wird. 
     <figure>
-        <img src="/tasks/u5/promisses_states.png" alt="Promisses States">
+        <img src="tasks/u5/promisses_states.png" alt="Promisses States">
         <figcaption>Abbildung 5.1: Zustandsgraph von Promisses. Ausgestellte Promisses sind im Pending Zustand und können, sobald die Berechnungen fertig sind, entweder resolved oder rejected werden. <reference-source author="freeCodeCamp" year="2022" url="https://www.freecodecamp.org/news/javascript-es6-promises-for-beginners-resolve-reject-and-chaining-explained/">Resolve, Reject, and Chaining in JS and ES6</reference-source> 
     </figcaption>
     </figure>
@@ -22,19 +22,19 @@
         </example-tab>
         
         <example-tab title="Code - a1.html">
-            <file-viewer src="/tasks/u5/a1.html">a1.html</file-viewer>
+            <file-viewer src="tasks/u5/a1.html">a1.html</file-viewer>
         </example-tab>
 
         <example-tab title="Code - A.txt">
-            <file-viewer src="/tasks/u5/A.txt">A.txt</file-viewer>
+            <file-viewer src="tasks/u5/A.txt">A.txt</file-viewer>
         </example-tab>
 
         <example-tab title="Code - B.txt">
-            <file-viewer src="/tasks/u5/B.txt">A.txt</file-viewer>
+            <file-viewer src="tasks/u5/B.txt">A.txt</file-viewer>
         </example-tab>
 
         <example-tab title="Vorschau">
-            <embed-browser src="/tasks/u5/a1.html"></embed-browser>
+            <embed-browser src="tasks/u5/a1.html"></embed-browser>
         </example-tab>
     </example-tabs>
 
@@ -48,19 +48,19 @@
     </example-tab>
 
     <example-tab title="Code - a2.html">
-        <file-viewer src="/tasks/u5/a2.html">a1.html</file-viewer>
+        <file-viewer src="tasks/u5/a2.html">a1.html</file-viewer>
     </example-tab>
 
     <example-tab title="Code - A.txt">
-        <file-viewer src="/tasks/u5/A.txt">A.txt</file-viewer>
+        <file-viewer src="tasks/u5/A.txt">A.txt</file-viewer>
     </example-tab>
 
     <example-tab title="Code - B.txt">
-        <file-viewer src="/tasks/u5/B.txt">A.txt</file-viewer>
+        <file-viewer src="tasks/u5/B.txt">A.txt</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u5/a2.html"></embed-browser>
+        <embed-browser src="tasks/u5/a2.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -73,23 +73,23 @@
     </example-tab>
     
     <example-tab title="Code - Primzahlen ohne WW">
-        <file-viewer src="/tasks/u5/a3_1.html">a3_1.html</file-viewer>
+        <file-viewer src="tasks/u5/a3_1.html">a3_1.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau - ohne WW">
-        <embed-browser src="/tasks/u5/a3_1.html"></embed-browser>
+        <embed-browser src="tasks/u5/a3_1.html"></embed-browser>
     </example-tab>
 
     <example-tab title="Code - Primzahlen mit WW">
-        <file-viewer src="/tasks/u5/a3_2.html">a3_2.html</file-viewer>
+        <file-viewer src="tasks/u5/a3_2.html">a3_2.html</file-viewer>
     </example-tab>
 
     <example-tab title="Code - WW">
-        <file-viewer src="/tasks/u5/a3.js">a3.js</file-viewer>
+        <file-viewer src="tasks/u5/a3.js">a3.js</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau - mit WW">
-        <embed-browser src="/tasks/u5/a3_2.html"></embed-browser>
+        <embed-browser src="tasks/u5/a3_2.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -106,16 +106,16 @@
     </example-tab>
 
     <example-tab title="Code - HTML">
-        <file-viewer src="/tasks/u5/a4.html">a4.html</file-viewer>
+        <file-viewer src="tasks/u5/a4.html">a4.html</file-viewer>
     </example-tab>
     <example-tab title="Code - JSON">
-        <file-viewer src="/tasks/u5/a4.json">a4.json</file-viewer>
+        <file-viewer src="tasks/u5/a4.json">a4.json</file-viewer>
     </example-tab>
     <example-tab title="Code - JS">
-        <file-viewer src="/tasks/u5/a4.js">a4.js</file-viewer>
+        <file-viewer src="tasks/u5/a4.js">a4.js</file-viewer>
     </example-tab>
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u5/a4.html"></embed-browser>
+        <embed-browser src="tasks/u5/a4.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
