--- a/tasks/u6/index.html
+++ b/tasks/u6/index.html
@@ -8,15 +8,15 @@
         <p>In dieser Aufgabe wird ein Balkendirgramm dynamisch, basierend auf den im JSON angegebenen Daten, berechnet und mit einer lkeichten Animation ausgegeben.</p>
     </example-tab>
     <example-tab title="HTML">
-        <file-viewer src="/tasks/u6/a1.html">a1.html</file-viewer>
+        <file-viewer src="tasks/u6/a1.html">a1.html</file-viewer>
     </example-tab>
 
     <example-tab title="JSON">
-        <file-viewer src="/tasks/u6/a1.json">a1.json</file-viewer>
+        <file-viewer src="tasks/u6/a1.json">a1.json</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u6/a1.html"></embed-browser>
+        <embed-browser src="tasks/u6/a1.html"></embed-browser>
     </example-tab>
 
 </example-tabs>
@@ -29,11 +29,11 @@
     </example-tab>
 
     <example-tab title="HTML">
-        <file-viewer src="/tasks/u6/a2.html">a2.html</file-viewer>
+        <file-viewer src="tasks/u6/a2.html">a2.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u6/a2.html"></embed-browser>
+        <embed-browser src="tasks/u6/a2.html"></embed-browser>
     </example-tab>
 
 </example-tabs>
@@ -46,11 +46,11 @@
     </example-tab>
     
     <example-tab title="HTML">
-        <file-viewer src="/tasks/u6/a3.html">a3.html</file-viewer>
+        <file-viewer src="tasks/u6/a3.html">a3.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u6/a3.html"></embed-browser>
+        <embed-browser src="tasks/u6/a3.html"></embed-browser>
     </example-tab>
 
 </example-tabs>
