--- a/tasks/u7/index.html
+++ b/tasks/u7/index.html
@@ -11,11 +11,11 @@
     </example-tab>
 
     <example-tab title="Code - File Gen">
-        <file-viewer src="/tasks/u7/a1_a.js">number_file_gen.js</file-viewer>
+        <file-viewer src="tasks/u7/a1_a.js">number_file_gen.js</file-viewer>
     </example-tab>
 
     <example-tab title="Code - Alpha File Gen">
-        <file-viewer src="/tasks/u7/a1_b.js">alpha_file_gen.js</file-viewer>
+        <file-viewer src="tasks/u7/a1_b.js">alpha_file_gen.js</file-viewer>
     </example-tab>
 </example-tabs>
 
@@ -31,11 +31,11 @@
     </example-tab>
 
     <example-tab title="Code - Merge">
-        <file-viewer src="/tasks/u7/a2_a.js">merge_files.js</file-viewer>
+        <file-viewer src="tasks/u7/a2_a.js">merge_files.js</file-viewer>
     </example-tab>
 
     <example-tab title="Code - Merge Stream">
-        <file-viewer src="/tasks/u7/a2_b.js">merge_streams.js</file-viewer>
+        <file-viewer src="tasks/u7/a2_b.js">merge_streams.js</file-viewer>
     </example-tab>
 
     <example-tab title="Ergebnisse">
