--- a/tasks/u8/index.html
+++ b/tasks/u8/index.html
@@ -11,11 +11,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u8/a1_1.html">a1_1.html</file-viewer>
+        <file-viewer src="tasks/u8/a1_1.html">a1_1.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u8/a1_1.html"></embed-browser>
+        <embed-browser src="tasks/u8/a1_1.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -26,11 +26,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u8/a1_2.html">a1_2.html</file-viewer>
+        <file-viewer src="tasks/u8/a1_2.html">a1_2.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u8/a1_2.html"></embed-browser>
+        <embed-browser src="tasks/u8/a1_2.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -44,11 +44,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u8/a1_3.html">a1_3.html</file-viewer>
+        <file-viewer src="tasks/u8/a1_3.html">a1_3.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u8/a1_3.html"></embed-browser>
+        <embed-browser src="tasks/u8/a1_3.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -62,11 +62,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u8/a1_4.html">a1_4.html</file-viewer>
+        <file-viewer src="tasks/u8/a1_4.html">a1_4.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u8/a1_4.html"></embed-browser>
+        <embed-browser src="tasks/u8/a1_4.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -80,11 +80,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u8/a1_5.html">a1_5.html</file-viewer>
+        <file-viewer src="tasks/u8/a1_5.html">a1_5.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u8/a1_5.html"></embed-browser>
+        <embed-browser src="tasks/u8/a1_5.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -98,11 +98,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u8/a1_6.html">a1_6.html</file-viewer>
+        <file-viewer src="tasks/u8/a1_6.html">a1_6.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u8/a1_6.html"></embed-browser>
+        <embed-browser src="tasks/u8/a1_6.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
@@ -116,11 +116,11 @@
     </example-tab>
 
     <example-tab title="Code">
-        <file-viewer src="/tasks/u8/a2.html">a2.html</file-viewer>
+        <file-viewer src="tasks/u8/a2.html">a2.html</file-viewer>
     </example-tab>
 
     <example-tab title="Vorschau">
-        <embed-browser src="/tasks/u8/a2.html"></embed-browser>
+        <embed-browser src="tasks/u8/a2.html"></embed-browser>
     </example-tab>
 </example-tabs>
 
