--- a/tasks/u9/index.html
+++ b/tasks/u9/index.html
@@ -41,7 +41,7 @@ Cumulative Layout Shift: 0
     </example-tab>
     <example-tab title="PWA als Download">
       <p>Die PWA aus der übung können Sie hier als ZIP herunterladen</p> <br>
-      <button><a href="/tasks/u9/pwa.zip">PWA als ZIP herunterladen &#8659;</a></button>
+      <button><a href="tasks/u9/pwa.zip">PWA als ZIP herunterladen &#8659;</a></button>
 
     </example-tab>
 
