live Preview weiter bearbeitet

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="module" src="assets/js/components/lit/embedBrowser/EmbedBrowser.mjs"></script>
     <script type="module" src="assets/js/components/lit/TabView/TabViewer.mjs"></script>
     <script type="module" src='assets/js/components/lit/reference/Reference.mjs'></script>
+    <script type="module" src="assets/js/components/lit/js-console/JsConsole.mjs"></script>
 
 </head>
 <body>
