--- a/tasks/u12/index.html
+++ b/tasks/u12/index.html
@@ -21,3 +21,21 @@
         <embed-browser src="/tasks/u1/Abschnitt1.html"></embed-browser>
     </example-tab>
   </example-tabs>
+
+
+
+
+
+<example-tabs>
+    <example-tab title="Live Preview">
+        <h3>Bla</h3>
+        <js-console src="tasks/u12/test.js"></js-console>
+    </example-tab>
+  </example-tabs>
+
+  <example-tabs>
+    <example-tab title="Live Preview">
+        <h3>Bla</h3>
+        <js-console src="tasks/u12/test.js"></js-console>
+    </example-tab>
+  </example-tabs>
